<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:cnb_iconColor="@color/secondary"/>

    <item
        android:id="@+id/event"
        android:title="@string/event"
        android:icon="@drawable/ic_event"
        app:cnb_iconColor="@color/secondary"/>

    <item
        android:id="@+id/data"
        android:title="@string/data"
        android:icon="@drawable/ic_list"
        app:cnb_iconColor="@color/secondary"/>

    <item
        android:id="@+id/mutabaah"
        android:title="@string/mutabaah"
        android:icon="@drawable/ic_mutabaah"
        app:cnb_iconColor="@color/secondary"/>
</menu>