<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    app:cardCornerRadius="14dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nama_kader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ichwan_sholihin"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/secondary"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/status_kader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="7dp"
            android:background="@drawable/shape_kader_aktif"
            android:fontFamily="@font/poppins_medium"
            android:padding="5dp"
            android:text="@string/aktif"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/expandable_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/nama_kader">

            <TextView
                android:id="@+id/amanah_kader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ketua_bidang"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:fontFamily="@font/source_sans"
                android:background="@drawable/shape_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/npm_kader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/npm_19312131"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/prodi_kader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodi_informatika"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amanah2"
                android:textSize="16sp"
                android:textColor="@color/secondary"
                android:fontFamily="@font/source_sans"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/ket_kader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amanah3"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>