<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_layout"
    tools:context=".verifuser.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_bg"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/masuk"
        android:textColor="@color/secondary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/selamat_datang_di_nukmi_ar_rahman_teknokrat"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/mail_login"
        style="@style/MarginTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pw_login"
        style="@style/MarginTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_login"
        android:textSize="16sp"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:padding="12dp"
        android:textColor="@color/secondary"/>

    <TextView
        android:id="@+id/tx_forgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:fontFamily="@font/poppins_medium"
        android:layout_below="@id/pw_login"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fab_login"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/belum_punya_akun_daftar"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_forgotpw"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_arrow_forward" />
</RelativeLayout>